Error-free version